--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,19 +3,35 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
         >
+    <TextView android:id="@+id/app_name"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:text="@string/app_name"
+              android:gravity="center_horizontal"
+              android:layout_alignParentTop="true"
+              android:layout_centerHorizontal="true"
+              android:paddingBottom="35dp"
+            />
     <TextView android:id="@+id/textViewInfo"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Aucune Position Sauvegarder"
-            android:layout_centerInParent="true"
-            android:gravity="center"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:text="Aucune Position Sauvegarder"
+              android:gravity="center_horizontal"
+              android:layout_below="@id/app_name"
+              android:paddingTop="80dp"
+              android:paddingBottom="80dp"
             />
-    <Button android:id="@+id/startButton"
-            android:text="@string/startButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            />
+        <Button android:id="@+id/startButton"
+                android:text="@string/startButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textViewInfo"
+                android:layout_centerHorizontal="true"
+                />
+        <Button android:id="@+id/quitButton"
+                android:text="@string/quitButton"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                />
 </RelativeLayout>
-
